--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "spago build",
+    "format": "purs-tidy format-in-place 'src/**/*.purs'",
     "run": "spago build && spago run",
     "spago": "spago",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +15,7 @@
   "license": "ISC",
   "devDependencies": {
     "purescript": "^0.14.5",
+    "purs-tidy": "^0.6.3",
     "spago": "^0.20.3"
   }
 }
